# prmait

./: .build.yml  .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  timeCost.txt
benches/: my_benchmark.rs
src/: effects.rs  files.rs  git.rs  input.rs  journal.rs  lib.rs  main.rs  river.rs  tasks.rs  time.rs  timeutils.rs
src/input/: arguments.rs  config_file.rs
src/journal/: book.rs  effectors.rs  entry.rs  error.rs  handlers.rs
src/tasks/: bulk.rs  error.rs  handlers.rs  task.rs  tasklist.rs
src/timeutils/: parser.rs
