[package]
name = "prmait"
version = "0.1.0"
edition = "2021"
description = "prmait is a set of personal tools"
authors = ["Perma <prma.dev@protonmail.com>"]
homepage = "https://codeberg.org/prma/prmait"
repository = "https://codeberg.org/prma/prmait"
license = "MPL-2.0"
readme = "README.md"


[features]
serde = ["dep:serde"]
default = ["serde"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "prmait"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
figment = { version = "0.10.11", features = ["env", "json"] }
fs_extra = "1.3.0"
serde = { version = "1.0.189", features = ["serde_derive", "rc"], optional = true }
serde_json = "1.0.107"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["serde", "local-offset"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
