[package]
name = "prmait"
version = "0.1.0"
edition = "2021"
description = "prmait is a set of personal tools"
authors = ["Perma <me@prma.dev>"]
homepage = "https://sr.ht/prma/prmait"
repository = "https://sr.ht.org/prma/prmait"
license = "MPL-2.0"
readme = "README.md"


[features]
serde = ["dep:serde"]
default = ["serde"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "prmait"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap_complete_command = { version = "0.5.1", features = ["carapace"] }
color-eyre = "0.6.2"
comfy-table = "7.1.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
figment = { version = "0.10.11", features = ["env", "json"] }
fs_extra = "1.3.0"
gix-discover = "0.26.0"
nom = "7.1.3"
once_cell = "1.18.0"
serde = { version = "1.0.189", features = ["serde_derive", "rc"], optional = true }
serde_json = "1.0.107"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["serde", "local-offset" , "serde-human-readable"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
default_numeric_fallback = "warn"
string_to_string = "warn"
unnecessary_self_imports = "warn"
str_to_string = "warn"
same_name_method = "warn"
rc_buffer = "warn"
panic_in_result_fn = "warn"
multiple_inherent_impl = "warn"
map_err_ignore = "warn"
if_then_some_else_none = "warn"
empty_structs_with_brackets = "warn"
useless_let_if_seq = "warn"
use_self = "warn"
missing_const_for_fn = "warn"
self_named_constructors = "warn"
cloned_instead_of_copied = "warn"
iter_cloned_collect = "warn"
implicit_clone = "warn"
map_clone = "warn"
# pedantic = "warn"
module_name_repetitions = "warn"
needless_pass_by_value = "warn"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"

[[bench]]
name = "my_benchmark"
harness = false
